# dreamfield

./: .gitignore  .gitmodules  Cargo.toml  build.rs  vs_debug.sln
dreamfield_macros/: Cargo.toml
dreamfield_macros/src/: lib.rs
dreamfield_renderer/: Cargo.toml
dreamfield_renderer/shaders/: blit.glsl  pbr.glsl  ps1.glsl  ps1_gs_clip.glsl  sky.glsl
dreamfield_renderer/shaders/include/: lighting.glsl
dreamfield_renderer/src/: camera.rs  components.rs  gl_backend.rs  lib.rs  renderer.rs  resources.rs  shaders.rs
dreamfield_renderer/src/gl_backend/: bindings.rs  framebuffer.rs  glfw_system.rs  gltf_model.rs  lights.rs  mesh.rs  shader.rs  texture.rs  uniform_buffer.rs
dreamfield_renderer/src/gl_backend/gltf_model/: gltf_animation.rs  gltf_light.rs  gltf_material.rs  gltf_mesh.rs  gltf_skin.rs  gltf_transform.rs
dreamfield_renderer/src/renderer/: renderer_resources.rs
dreamfield_renderer/src/resources/: fonts.rs  models.rs  shaders.rs  textures.rs
dreamfield_system/: Cargo.toml
dreamfield_system/src/: components.rs  fixed_timestep.rs  game_host.rs  glfw_system.rs  input.rs  intersection.rs  lib.rs  math.rs  resources.rs  systems.rs  world.rs
dreamfield_traits/: Cargo.toml
dreamfield_traits/src/: lib.rs
resources/fonts/: 0xDB_medievalish_chonker_8x8_1bpp_bmp_font_packed.csv  medieval_2x.csv  medieval_4x.csv
resources/models/: CnM_logo.blend  CnM_logo.glb  bat.blend  capsule.blend  capsule.glb  catstation_billboard.blend  catstation_billboard.glb  demo_scene.blend  demo_scene.glb  demo_scene_bug.blend  demo_scene_fail.glb  dungeon.blend  dungeon.glb  elf.blend  elf.glb  fire_orb.blend  fire_orb.glb  minecart.blend  minecart.glb  playstation_logo.blend  resources.blend  samy_diamond.blend  samy_diamond.glb  scene_a.blend  scene_a.glb  scene_b.blend  scene_b.glb  scene_c.blend  scene_c.glb  scene_d.blend  scene_d.glb  scene_e.blend  scene_e.glb  skybox.blend  squid.blend  suzanne.blend  suzanne.glb  sword.blend  torch.blend  torch.glb  (+8 more)
resources/shaders/: blit.glsl  catstation.glsl  composite_resolve.glsl  composite_yiq.glsl  glfw_model.glsl  pbr.glsl  ps1.glsl  ps1_gs_clip.glsl  ps1_per_vertex.glsl  sky.glsl  sky_rectangle.glsl  text.glsl
resources/textures/: atlas.clip  bark.clip  fire.clip  glow.clip  grass.clip  leaves.clip  light.clip  path_atlas.clip  sand.clip  sky.clip  squid.clip  stone.clip  stone_wall.clip  tree.clip  water.clip
src/: app_state.rs  bevy_ecs_game_host.rs  fixed_timestep.rs  game_host.rs  game_state.rs  main.rs  renderer.rs  resources.rs  rewindable_game_state.rs  sim.rs  states.rs  system.rs
src/renderer/: camera.rs  gl.rs  gl_renderer.rs  glfw.rs  mesh.rs  renderer_resources.rs  renderer_settings.rs  resources.rs  shader.rs  shaders.rs
src/sim/: ball.rs  entity_spawner.rs  input.rs  intersection.rs  level_collision.rs  minecart.rs  player_movement.rs  sim_time.rs
src/states/: main_game.rs  main_menu.rs  pause_menu.rs  splash_screen.rs  title_screen.rs
src/system/: glfw_system.rs
(+24 files in other folders)
