[package]
name = "dreamfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.45.0"
image = "0.24.2"
tobj = "3.2.3"
num = "0.4.0"
rand = "0.8.5"
gltf = { version = "1.0", features = ["extras", "names", "KHR_lights_punctual"] }
std140 = { git = "https://github.com/catchouli/std140.rs" }
strum = "0.24.1"
strum_macros = "0.24.1"
rangemap = "1.0.3"
gpp = "0.6.2"
dreamfield_macros = { path = "dreamfield_macros" }
dreamfield_traits = { path = "dreamfield_traits" }
