[package]
name = "dreamfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.45.0"
image = "0.24.2"
std140 = { git = "https://github.com/catchouli/std140.rs" }
nalgebra = "0.31.1"
ncollide3d = "0.33.0"
byteorder = "1.4.3"
gltf = { version = "1.0", features = ["extras", "names", "KHR_lights_punctual"] }
dreamfield_renderer = { path = "dreamfield_renderer" }
dreamfield_macros = { path = "dreamfield_macros" }
dreamfield_traits = { path = "dreamfield_traits" }
