[package]
name = "dreamfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.45.0"
image = "0.24.2"
std140 = { git = "https://github.com/catchouli/std140.rs" }
byteorder = "1.4.3"
bevy_ecs = "0.8.1"
gltf = { version = "1.0", features = ["extras", "names"] }
dreamfield_system = { path = "dreamfield_engine/dreamfield_system" }
dreamfield_renderer = { path = "dreamfield_engine/dreamfield_renderer" }
dreamfield_macros = { path = "dreamfield_engine/dreamfield_macros" }
dreamfield_traits = { path = "dreamfield_engine/dreamfield_traits" }
speedy = "0.8.3"
include_dir = "0.7.2"

[build-dependencies]
dreamfield_system = { path = "dreamfield_engine/dreamfield_system" }
speedy = "0.8.3"
