[package]
name = "dreamfield_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
gl = "0.14.0"
image = "0.24.2"
cgmath = "0.18.0"
strum = "0.24.1"
strum_macros = "0.24.1"
gltf = { version = "1.0", features = ["extras", "names", "KHR_lights_punctual"] }
rangemap = "1.0.3"
std140 = { git = "https://github.com/catchouli/std140.rs" }
byteorder = "1.4.3"
glfw = "0.45.0"
bevy_ecs = "0.8.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.83"
dreamfield_macros = { path = "../dreamfield_macros" }
dreamfield_traits = { path = "../dreamfield_traits" }
